--- a/Manuscript/PTMsMODa.tex
+++ b/Manuscript/PTMsMODa.tex
@@ -226,30 +226,30 @@ Protein oxidation by reactive oxygen species (ROS) is linked to various diseases
 
 There are some limitations with respect to how we did MODa searches. One of the limitations in the searches performed in the current work is that we used the default mass-range search between -200 and 200 Da (and one other search with -200 and 300 Da range). So, we miss out on larger PTMs. Another computational limitation is that we looked for only 1 possible modification on each of the peptides identified. This is because MODa was shown in the past to generate many false positives if searched for multiple PTMs on the same peptide. After the peptides are ID'ed, generally the PTMs are validated by a 2nd round by using programs like Ascore etc. However here, we did not do any 2nd round of validating peptides, as MODa is shown to ID high-confidence PTM identifications in its search. Another, probably important limitation is that we did not do any PTM level quantitation or try to understand the specific PTM stoichiometry, as these require sophisticated experimental instrumentation, good enrichment protocol and the algorithms to characterize the PTMs associated with proteins. However MODa has been a software suite that has been recently used in both in bacterial proteomics as well as biomedical applications such as urinary proteomics to find biomarkers \cite{Liuetal2013}.
 
-Current whole-cell models \cite{Covertetal2008} integrate diverse kinds of OMICS data i.e., transcriptomics, proteomics not only to refine the existing models, but also make reasonable predictions on which genes/enzymes are key for example, for a particular metabolite production etc. Here, we argue that including the modification information (i.e., number of modified proteins to that of the unmodified version) would improve the protein level abundances and thus will improve the computational predictions. Another advantage of the protocol we developed here is to study the PTM networks in cohert. Most of the PTM networks studied till date either focussed on a single PTM such as phosphorylation \cite{Olsenetal2006} or handful of related PTMs, such as glycosylation and phosphorylation.
+Current whole-cell models \cite{Covertetal2008} integrate diverse kinds of OMICS data i.e., transcriptomics, proteomics not only to refine the existing models, but also make reasonable predictions on which genes/enzymes are key for example, for a particular metabolite production etc. Here, we argue that including the modification information (i.e., number of modified proteins to that of the unmodified version) would improve the protein level abundances and thus will improve the computational predictions. Another advantage of the protocol we developed here is to study the PTM networks in cohert. Most of the PTM networks studied till date either focussed on a single PTM such as phosphorylation \cite{Olsenetal2006} or handful of related PTMs, such as glycosylation and phosphorylation. Most of the search engines currently in use can also use the output of MODa to identify the frequently occuring mass-shifts that they can then input to their favorite search engine to increase the sensitivity of the peptide hits.
 
 \section{Conclusions}
 
-The modified protein seems to be at a constant 30\% during exponential as well as the long stationary phases. Acetylation, in particular n-term acetylation seems to go up from exponential to stationary phases. Surprisingly oxidation seemed to go down from exponential to stationary phases, owing to sulfoxide reductases playing a role in protecting \emph{E. coli} from oxidative damage by fixing methionine sulfoxide back to methionine. We found some novel targets for n-term acetylation that were not previously identified in \emph{E. coli}. Phosphorylations and carboxylations also seem to increase indicating a likely role of these PTMs in late-stationary phases of the growth curve. A novel phosphoserinegluconylation on ribosomal protein along with few others is identified. Finally, we would like to conclude that unrestricted search engines can be used to identify frequently occuring PTMs, which can then be used with restricted search algorithms to improve the sensitivity of the ID'ed peptides.
+The amount of modified protein seems to be at a constant 30\% during exponential as well as the long stationary phases. Acetylation, in particular n-term acetylation goes up from exponential to stationary phases. Surprisingly oxidation levels went down from exponential to stationary phases, as sulfoxide reductases that fix MetSO back to Met increased in their enzyme levels, playing a key role in protecting \emph{E. coli} from oxidative damage. We found some new protein targets for n-term acetylation. Phosphorylations, even though identified less frequently, increased from exponential to stationary phase, indicating a likely role of this PTM in late-stationary phases of the growth curve. A novel 39 Dalton mass-shift on isoleucine was shown to be dominant on exinuclease ABC subunit C. 
 
 
 \section{Materials and Methods}
 
 \subsection{\emph{E. coli} growth} 
 
-The details of \emph{E. coli} growth is provided in our manuscript that described the initial analysis of this data \cite{Houseretal2015}. In brief, \emph{E. coli} was grown in glucose minimal media and the samples are collected at 8 different time points. The time points considered were 3, 4, 5, 8, 24, 48, 168 and 336 hours of \emph{E. coli} growth. At each time point, there were 3 biological replicates i.e., the cultures grown at different time. Details on the mass-spectrometry is provided in the same paper as well. Trypsin was used to digest the proteins and then the sample is analyzed using liquid chromatography mass spectrometry (LC/MS) on a LTQ-Orbitrap (Thermo Fisher). For each time point, there were 3 biological replicates that were analyzed.
+The details of \emph{E. coli} growth is provided in our manuscript that described the initial analysis with this proteomics data \cite{Houseretal2015}. In brief, \emph{E. coli} was grown in glucose minimal media and the samples are collected at 8 different time points. The time points considered were 3, 4, 5, 8, 24, 48, 168 and 336 hours of \emph{E. coli} growth. At each time point, there were 3 biological replicates (cultures grown at different times). Detailed information on the mass-spectrometry is provided in the Houser et. al. paper \cite{Houseretal2015} as well. Trypsin was used to digest the proteins and then the sample wass analyzed using liquid chromatography mass spectrometry (LC/MS) on a LTQ-Orbitrap (Thermo Fisher). 
 
 \subsection{Post-translational modification identification and analysis} 
 
-Mass-spectrometry raw data was then converted into mzXML files to input into MODa \cite{Naetal2012}. MODa is a naive based spectral alignment algorithm that identifies peptides and their associated PTMs from the input spectral files. MODa generates sequences tags from experimental MS/MS spectra and using a dynamic programming approach, the program identifies the  mass-shifts between the sequence tags. Identifying sequence tags reduces the database search significantly, thus reducing the total run time. For each PSM, if there is mass-shift present, it outputs it as a frequency table, listing the total number of mass-shifts found on each of the amino acids, along with c-term and n-term for all the PSMs involved in the dataset. In a separate file, it also lists all the peptide spectral matches. First, we used the mass-shifts to investigate at PTM level. So, for each mass-shift, we identified the possible PTM it matches to, using UNIMOD database. We did this task manually i.e., if we see +16Da, from UNIMOD we know that it is oxidation. We then looked at the amino-acid profile for the mass-shift we consider, to reduce the ambiguity. If we see +16Da on Met, it is clearly Methionine oxidation than a carboxy to thiocarboxy conversion, as this carboxy conversion happens on glutamine only. At least for all the mass-shifts considered in this analysis, there was no ambiguity in terms of a mass-shift matching to multiple possible PTMs, except +1Da. We looked at the aminWe did not do any in-depth analysis for +1Da, as it can result both from precursor peak picking deamidation or combination of PTMs (i.e., 43Da, could be +1Da and 42Da). Since we used a restriction to identify only one PTM, to reduce false positives, this scenario is possible. For some mass-shifts, we looked at the amino-acid profiles i.e., which amino acid has the mass-shift frequently to confirm the UNIMOD PTM list i.e., from oxidation profile, it is clear that Met is the  most frequent and from UNIMOD, it is obvious that this corresponds to methionine oxidation. We also looked at well known PTMs that were observed in previous studies in \emph{E. coli}. For example, even though carboxylations and nitrosylations seemed rare (from frequencies of mass-shifts), since we know the mass-shift and the expected amino acids on which this modification happens, we were able to plot the temporal changes. Some frequently occuring mass-shifts did not map to PTMs, but they did map to Na and K adducts, as evident from UNIMOD. In this analysis, we did not consider any mutations. In future, we plan to look at these separately.
+Mass-spectrometry raw data is then converted to a mzXML file format to input into MODa \cite{Naetal2012}. MODa is a naive based spectral alignment algorithm that identifies peptides and their associated PTMs from the input mzXML spectral files. The program needs few other parameters, such as enzyme used, instrument used to capture the  mass-spec data, precursor and product ion mass tolerances, fixed modifications, any rules to apply on the digest, such as semi-tryptic or fully-tryptic in our case, number of modifications per peptide and the mass-range to search for the PTMs. We ran separate MODa searches for each of the 9 time points. Since there were 3 biological replicates, this resulted in total 27 MODa searches.  To speed up the searches, we used UT TACC computing resources. The enzyme used in the searches is trypsin with fully-tryptic and no proline rule. The missed cleavages allowed are 2. The mass-tolerance used for the precursor ion is 10 ppm, while the mass-tolerance used for the product ion is 0.5 Da. We set carbamidomethylation of cysteine as a static or fixed modification. As mentioned earlier, MODa requires a mass range to search for variable modifications, so we run MODa searches for 2 scenarios: (1) mass range between -200 to 200Da and (2) second search with mass range between -100 to 300Da. Since we were interested in PTMs, there was no need to include negative mass-shifts, but we included these as mentioned in the MODa protocol. We used REL606 NCBI \emph{E. coli} sequence library. 
 
-We ran separate MODa searches for each of the 9 time points. Since there were 3 biological replicates, this resulted in total 27 MODa searches.  To speed up the searches, we used UT TACC computing resources. The enzyme used in the searches is trypsin with fully-tryptic and no proline rule. The missed cleavages allowed are 2. Since the fragmentation technique used is CID, we looked for b/y ions. The mass-tolerance used for the precursor ion is 10 ppm, while the mass-tolerance used for the product ion is 0.5 Da. We set carbamidomethylation of cysteine as a static or fixed modification. As mentioned earlier, MODa requires a mass range to search for variable modifications, so we run MODa searches for 2 scenarios: (1) mass range between -200 to 200Da and (2) second search with mass range between -100 to 300Da. Since we were interested in PTMs, there was no need to include negative mass-shifts, but we included these as mentioned in the MODa protocol. We used REL606 NCBI \emph{E. coli} sequence library. 
+Using this information, first MODa generates sequences tags from experimental MS/MS spectra. In parallel,  the program identifies the mass-shifts between the sequence tags. Identifying sequence tags, and then matching only with the peptides in the sequence library that have these tags reduces the search time and false positives significantly. MODa outputs 3 files. In 1 file, it outputs the peptide spectral matches, then it uses the information in this file to output the frequency of mass-shifts on different amino acids along with c-term and n-term across the entire dataset. In a separate 3rd file, it lists out the number of proteins identified at 1\%FDR. In a separate file, it also lists all the peptide spectral matches. First, we used the mass-shifts to investigate at PTM level. So, for each mass-shift, depending on which amino acid or a set of amino acids, this mass-shift occurs, we identified the possible PTM it matches to, using UNIMOD database. We did not automate this process, and we did this by manual curation. For example, if we see +16Da mass-shift frequently occuring on methionine, from UNIMOD we know that it is methionine oxidation, than a carboxy to thiocarboxy conversion, as this carboxy conversion happens on glutamine only. At least for all the mass-shifts considered in this analysis, there was no ambiguity in terms of a mass-shift matching to multiple possible PTMs. We also looked at well known PTMs that were observed in previous studies in \emph{E. coli}. For example, even though carboxylations and nitrosylations seemed rare (from frequencies of mass-shifts), since we know the mass-shift and the expected amino acids on which this modification happens, we were able to plot the temporal changes. Some frequently occuring mass-shifts did not map to PTMs, but they did map to Na and K adducts, as evident from UNIMOD. In this analysis, we did not consider any mutations. In future, we plan to look at these separately.
 
 Once we have the peptide hits from MODa output, we used target-decoy approach \cite{EliasGygi2007} to identify high-confidence hits. In this approach, we reverse the original REL sequences and concatenate these to the original sequence database to form a target-decoy database. This database is twice the size of the original sequence database. The idea is that there are as many false positive hits to that of the original database as that of the decoy database. We used a 1\% FDR that is a general norm in mass-spectrometry based proteomics searches. The protein levels are plotted by using simple peptide spectral counting, that seems reasonable in the case of simple model organism such as \emph{E. coli}.
 
 \subsection{Protein target analysis} 
 
-For n-term acetylation and oxidation, we did additional analyses at protein level. We identified all the proteins that were acetylated at n-term,  or oxidized at methionine and compared these targets with the available literature to see if we identify additional novel protein targets. The scripts were written in ipython. The GO analysis was done using DAVID.
+For n-term acetylation, oxidation, phosphorylation and methionine to glutamine substitution, we did additional analyses at protein level, as we were interested in protein targets of these modifications. We provided a list of all the peptide spectral matches separately for these modifications in our github repository. We have the peptide spectrum frequencies i.e., which peptide occurs frequently along with the frequency of proteins that have these mods. Some proteins seem to appear in exponential phase, while others in stationary and late-stationary phases. To understand the functionality of these proteins, we used DAVID for GO analysis \textbf{Confirm with Colin}.
 %To verify if n-term modifications seems to be picked more than c-term, we did not use carbamidomethylation of Cysteine as a static modificaiton.
 
 %For example, the total number of Cysteine that are modified are ~6%. This could be because of multiple reasons:
