--- a/Manuscript/PTMsMODa.tex
+++ b/Manuscript/PTMsMODa.tex
@@ -73,34 +73,35 @@ Here, apart from doing an unrestricted search of PTMs, we investigated the level
 \section{Results}
 
 \subsection{Running MODa on \emph{E. coli} proteome}
-Post-translational modifications, in most cases, determine the specific function of the protein. Identifying all the PTM combinations or the set of PTMs associated with all the proteins (i.e., entire proteome) is limited by experimental enrichment techniques for PTMs as well as computational limitations. The current analysis of \emph{E. coli} dataset is not enriched for any PTMs.  Most of the current studies focus on a single PTM coverage, such as generally done in phosphoproteomics studies, glycosylation studies or acetylation studies, where the sample is enriched for a particular PTM. 
+Post-translational modifications determine the specific function of the protein. Identifying all the PTM combinations or the set of PTMs associated with all the proteins (i.e., entire proteome) is an overarching goal of mass-spectrometry based proteomics. However, this is limited by both experimental enrichment techniques for PTMs and computational limitations that can identify all the possible PTMs. The \emph{E. coli} dataset used in this work is not enriched for any PTMs.
 
-We have mass-spectrometry data at 9 different points of the OD600 curve (see Suppl Figure S1). At each time point, there were 3 biological replicates. We then used MODa on each of these data sets to identify the PTM level information. MODa is a sequence search algorithm that takes as an input mass-spectrometry data and identifies peptides and PTMs associated with the proteins. MODa is a naive based search algorithm that uses an unrestricted approach to find the post-translational modifications in the data. The parameters used with MODa is described in detail in the methods section of the paper. In brief, MODa uses multiple short sequence tag information in the spectra along with a dynamic programming approach to identify the peptide hits along with their protein identifiers. The use of multiple tags reduces both the database size and the false positives. MODa outputs 2 data files that we used in our analyses (1) it outputs the frequency of the mass-shifts on different amino-acids along with N- and C- term of the peptides, (2) it outputs peptide level information like most of other search engines. Once we have the MODa search results, we asked the following questions: (a) How much of the proteome is modified? (b) How do these modifications change over time? (c) Is there any biological relevance associated with the temporal change of a particular PTM? (c) Can we find any novel modifications in this \emph{E. coli} data? 
+We have mass-spectrometry data at 9 different points of the OD600 curve (see Suppl Figure S1). At each time point, there were 3 biological replicates. We then used MODa on each of these data sets to get the PTM level information. MODa is a sequence search algorithm that takes as an input mass-spectrometry data and identifies peptides and PTMs associated with the proteins. MODa is a naive based search algorithm that uses an unrestricted approach to find the post-translational modifications in the data. The parameters used with MODa is described in detail in the methods section of the paper. In brief, MODa uses multiple short sequence tag information in the spectra along with a dynamic programming approach to identify the peptide hits along with their protein identifiers. The use of multiple tags reduces both the database size and the false positives. MODa outputs 2 data files that we used in our analyses (1) it outputs peptide level information like most of other search engines, (2) it outputs the frequency of the mass-shifts on different amino-acids along with N- and C- term of the peptides. Once we have the MODa search results, we asked the following questions: (a) How much of the proteome is modified? (b) How do these modifications change over time? (c) Is there any biological relevance associated with the temporal change of a particular PTM? (c) Can we find any novel modifications in this \emph{E. coli} data? 
 
 %The mass-spectrometry data gathered at the 9 time points is then searched for PTMs using MODa, a naive based spectral alignment search algorithm, for peptide identifications. At each of these 9 time points, we gathered data for 3 biological replicates. Unlike most of the other peptide identification search algorithms, MODa requires range of mass for PTM identification. So, for our analysis we used a range of -200 to 200 Da which is typical to this search engine. MODa is a multi-blind algorithm i.e., there is no restriction on the  number of PTMs identified on a single peptide. However previous studies have shown better sensitivity of the algorithm with the use of 1 mod per peptide. We used 1 mod per peptide for most of the analysis, however we compared our results with using 2 mods per peptide too.
 
 %(d) Can we explain the pattern of the PTMs over time using other diverse kinds of data such as RNA-seq? In this project, we also collected mRNA via RNA-seq, lipid profiles and metabolic fluxes using mass-spec methods. We went back and compared our proteomics data with these other kinds of data for further validation, wherever necessary.
 
 \subsection{Modified \emph{E. coli} proteome}
-First, we are interested in identifying the amount of proteome modified. Since we have data at each of the 9 time points i.e., from exponential to long-stationary phases, we plotted the total frequency of all PTMs at each of these time points. For this, we simply calculated the percentage of the total number of modified peptide spectral matches (PSMs) at each time point. We used 1 standard error to plot the variation within 3 biological replicates.
+Protein function is shown to have a link to the PTMs that are associated with it. Since, we have the MODa output of modified peptide spectral matches, we first calculated the amount of proteome modified. We did this for all the 9 time points i.e., from exponential to long-stationary phases. we plotted the total frequency of all PTMs at each of these time points. Figure~\ref{fig:ModifiedPTM} shows the total percent of the peptide-spectral matches on the y-axis and the time from OD600 plot on the x-axis. It is clear that the amount of spectra that is modified stays approx. at 30\% during all the phases of the growth. Percentage modified is the percentage of the number of modified peptide spectral matches (PSMs) to the total (modified + unmodified) peptide spectral matches. We used 1 standard error to plot the variation within 3 biological replicates.
 
-Figure~\ref{fig:ModifiedPTM} shows the total percent of the peptide-spectral matches on the y-axis and the time from OD600 plot on the x-axis. It is clear that the amount of spectra that is modified stays approx. at 30\% during all the phases of the growth. Most of the previous studies on identifying multiple tandem PTMs looked at a "snapshot" of the proteome, instead of looking at different phases during the growth. We then looked at the coverage of the proteome at these time points. The number of proteins identified at each of these 9 time points are 2227, 2246
-,2278, 2251, 2306, 2342, 2298, 2234 and 2193 respectively. The number of identifications are a bit lower when compared to our previous analysis using Sequest \cite{Houseretal2015}. However MODa is an algorithm that is more widely used to unravel new PTMs than to increase the protein coverage. We considered all the peptide spectral matches i.e., one-hit wonders too. Later, when we use the data to identify the protein targets for different PTMs, we included a strict criteria of including proteins that have at least 2 peptide hits. This resulted in 1861, 1822, 1857, 1839, 1864, 1892, 1866, 1813 and 1758 protein identifications at each of the 9 time points analyzed in this study.
+We then looked at the coverage of the proteome at these time points. The number of proteins identified at each of these 9 time points are 2227, 2246, 2278, 2251, 2306, 2342, 2298, 2234 and 2193 respectively. The number of identifications are a bit lower when compared to our previous analysis using Sequest \cite{Houseretal2015} on the same dataset. However MODa is an algorithm that is more widely used to unravel new PTMs and one of the goals of the current work is to do a large-scale analyses of these PTMs under varying conditions of growth. The above protein identifications are when we considered all the peptide spectral matches i.e., one-hit wonders too. One-hit wonders are the proteins identified with only 1 PSM mapped to it. Later on, when we identify the protein targets of the PTMs, we used a criteria that a protein is considered if there were at least 2 PSMs (either same peptide appearing twice or at least 2 different peptides). This additional criteria resulted in 1861, 1822, 1857, 1839, 1864, 1892, 1866, 1813 and 1758 protein identifications at each of the 9 time points analyzed in this study.
 %(Cite some studies, for example Soufi et al and other papers they cited?)
 %However note that a modification could be a mutation or a post-translational modification.
 
 \subsection{Mapping mass-shifts to post-translational modifications}
 
-We next looked at the distribution of the mass-shifts or PTMs at each time point of the growth curve i.e., what PTMs are present at a given time point and how does it change over time? MODa outputs mass-shifts in integer masses in the peptide hits. A mass-shift indicates either a PTM or a substitution compared to the reference database. The mass-shifts are then converted to PTMs using UNIMOD database, as described in methods section. For example, we know that +16 Dalton shift on any amino acid is most likely the oxidation. When we looked at the UNIMOD PTM list, we did see that this is oxidation, generally shown to occur on few amino acids such as cysteine, methionine etc. We did not limit our analysis to frequently occuring mass-shifts, but also focussed on well known PTMs, and novel mass-shifts that were not characterized earlier. However, we did not investigate into mutations and this will be a topic we will look in the future as this is a possibility with MODa output.
+The function of the protein, hence PTMs associated with it, depends on the environment. A changing environment results in different set of protein interactions and modified proteins. Since we have the information on each mass-shift as a function of the time, we investigated how these mass-shifts change over time. For this, we post-processed the output from MODa. MODa outputs mass-shifts in integer masses in the peptide hits. A mass-shift indicates either a PTM or a substitution. The mass-shifts are then mapped to PTMs using UNIMOD database, as described in methods section. For example, we know that +16 Dalton shift on any amino acid is most likely the oxidation. When we looked at the UNIMOD PTM list, we did see that this is oxidation, generally shown to occur on few amino acids such as cysteine, methionine etc.
 
-Even though the total amount of modified proteome is mostly constant ~30\%, the content of PTMs at each time point vary during different phases of growth i.e., a particular modification can either stay constant, decrease or increase from expoential to long-stationary phases. To look at this in detail, we first plotted the frequency of different mass-shifts from the MODa output at 2 different time points. Figure~\ref{fig:PTMinDalton} shows this mass-shift frequency at 3 hrs and 24 hrs. Figure~\ref{fig:PTMinDalton} (A) shows the mass-shift frequency at 3 hours, while (B) shows the frequency at 24 hours. The height of the bins is the percentage of the mass-shifts in the entire peptide-spectral match list. Since we used 3 biological replicates, the actual \% is the mean of the 3 replicates. We tabulated the frequently occuring mass-shifts at each of these time points (Suppl Table 1). +1 Da is the most frequent mass-shift at all time points. However this +1 Da modification seems to be 13C peak-picking as it seems to be randomly occuring on all the amino acids, as shown in the profile (Suppl Figure S6). Next frequently occuring modification is +16Da that represents to oxidation. Oxidation seems to clearly go down from 3 (early exponential phase) to 24 hours (stationary phsae). We investigated this in detail and presented as a separate subsection below. Other than 42Da, -2Da most other frequently occuring mass-shifts are either artifacts due to sample preparation or a combination of 2 mass-shifts i.e., +1 Da and +57 Da, 2 +57Da's = 114 Da etc. +42Da corresponds to acetylation and is a PTM that is of biological interest. Hence, we investigated this PTM in detail, especially n-terminal acetylated proteins. -2 Da seems to be methionine to glutamine substitution. Other important PTMs in E. coli reported in literature are n-terminal methionine excision, phosphorylation, carboxylation, nitrosylation, methylation, glycosylation etc. So, we investigated few of these even though these appear at lower levels in our data set.
+Even though the total amount of modified proteome is mostly constant ~30\%, the content of PTMs at each time point vary during different phases of growth i.e., a particular modification can either stay constant, decrease or increase from expoential to long-stationary phases. To look at this in detail, we first plotted the frequency of different mass-shifts from the MODa output at 2 different time points. Figure~\ref{fig:PTMinDalton} shows this mass-shift frequency at 3 hrs and 24 hrs. Figure~\ref{fig:PTMinDalton} (A) shows the mass-shift frequency at 3 hours, while (B) shows the frequency at 24 hours. The height of the bins is the percentage of the mass-shifts in the entire peptide-spectral match list. Since we used 3 biological replicates, the actual \% is the mean of the 3 replicates. We tabulated the frequently occuring mass-shifts at each of these time points (Suppl Table 1). As seen from this table, +1 Da is the most frequent mass-shift at all time points. However this +1 Da modification is generally the result of 13C peak-picking. From the amino-acid profile, we clearly see that this happens randomly on all the amino acids confirming that it is indeed mostly 13C peak-picking (Suppl Figure S6). Next frequently occuring modification is +16Da that represents to oxidation. Oxidation seems to clearly go down from 3 (early exponential phase) to 24 hours (stationary phsae). We investigated this mass-shift in detail as oxidative stress is widely studied topic. Other than 42Da (acetylation), -2Da most other frequently occuring mass-shifts are either artifacts due to sample preparation or a combination of 2 mass-shifts i.e., +1 Da and +57 Da, 2 +57Da's = 114 Da etc. +42Da corresponds to acetylation and is a PTM that is of biological interest. Hence, we investigated this PTM in detail, especially n-terminal acetylated proteins. -2 Da seems to be methionine to glutamine substitution. We did not limit our analysis to frequently occuring mass-shifts, but also focussed on well known PTMs, and novel mass-shifts that were not characterized earlier. Other important PTMs in \emph{E. coli} reported in literature are n-terminal methionine excision, phosphorylation, carboxylation, nitrosylation, methylation, glycosylation etc. So, we investigated few of these even though these appear at lower levels in our data set.
 
 
 %\subsection{N-term methionine excision mechanism in \emph{E. coli}}
 %n-terminal methionine excision is shown as a process that is universally conserved across a diverse range of species, spanning bacteria to eukaryotes. Here, we looked in detail at how this mechanism changes from exponential phase to long-stationary phase. (Add text/figures etc), may be 1 figure in the main paper and one in the suppl. \textbf{Did not find any change in the time course, and hence did not continue to work on this part}
+%\subsection{Frequently occuring mass-shifts}
 
-\subsection{Frequently occuring mass-shifts}
-We investigated the frequently occuring peptide spectral matches with mass-shifts. Even though +1Da is the most dominant one, since it occurs randomly on all the amino acids possible, +16Da mass-shift in the peptide spectral matches are the dominant ones and occur almost 7 or 8 times in the top 10 most abundant peptide spectral matches. Here, we provide a table of frequently occuring mass-shifts that don't have the +16 Da or other artifacts such as sodium (+22 Da) and potassium (+38 Da) adducts. Table X summarizes these peptide spectral matches at different points of the time growth. It is clear that acetylation is the most dominant post-translational modificaiton that seem to occur at all these times points. We found a new +62 Dalton on N-terminal Aspargine, which was not shown to be reported previously. The protein mapped to this peptide is excinuclease ABC subnit C. In Uniprot, there was no information on PTM processing at this site. However, this mass-shift was shown to occur only in one biological replicate of 3 hours, indicating a probable artifact caused by either sample preparation or due to the instrument. Unimod has a +62 Dalton usually reported on lysine. The peptide has a K before the cleavage and hence the adduct must have shifted to this residue on N-term. Another new modified peptide spectral match is K.NMITGAAQMDGAI+39LVVAATDGPMPQTR.E. This modified peptide of elongation factor Tu was found at all the time-points of the growth. This amino acid was not shown to be modified earlier, as indicated by UniProt records. Unimod did not show this mass-shift of 39 Dalton on isoleucine.
+We investigated the frequently occuring peptide spectral matches with mass-shifts. Even though +1Da is the most dominant one, since it occurs randomly on all the amino acids possible, +16Da mass-shift in the peptide spectral matches are the dominant ones and occur almost 7 or 8 times in the top 10 most abundant peptide spectral matches. Here, we provide a table of frequently occuring mass-shifts that don't have the +16 Da or other artifacts such as sodium (+22 Da) and potassium (+38 Da) adducts. Table X summarizes these peptide spectral matches at different points of the time growth. It is clear that, apart from oxidation, and -17, -18 Da that are ammonia and water losses, acetylation is the most dominant post-translational modification that seem to occur at all these times points. 
+
+Other than the known PTMs, we found a new +62 Dalton on N-terminal Aspargine, which was not shown to be reported previously. The protein mapped to this peptide is excinuclease ABC subnit C. In Uniprot, there was no information on PTM processing at this site. However, this mass-shift was shown to occur only in one biological replicate of 3 hours, indicating a probable artifact caused by either sample preparation or due to the instrument. Unimod has a +62 Dalton usually reported on lysine. The peptide has a K before the cleavage and hence the adduct must have shifted to this residue on N-term. Another new modified peptide spectral match is K.NMITGAAQMDGAI+39LVVAATDGPMPQTR.E. This modified peptide of elongation factor Tu was found at all the time-points of the growth. This amino acid was not shown to be modified earlier, as indicated by UniProt records. Unimod did not show this mass-shift of 39 Dalton on isoleucine.
 
 \subsection{N-term protein acetylations are frequent in \emph{E. coli}}
 
